package DataStruct;

public enum OperationStartRelationShip {
    ES,
    SSEE,
}
