package DataStruct;

public enum SupplyType {
    MO,
    MRP,
    PLAN,
    PO,
    PR,
    SO
}
